feat: pet 등록 기능 개발 완료.

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation 'commons-io:commons-io:2.11.0'
+
+
 
 }
 
