--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,7 +11,7 @@ spring:
         format_sql: true
     database-platform: org.hibernate.dialect.MariaDB103Dialect
   datasource:
-    url: jdbc:mariadb://localhost:33306/togaether?autoReconnect=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mariadb://192.168.0.83:33306/togaether?autoReconnect=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: password
     driver-class-name: org.mariadb.jdbc.Driver
@@ -46,3 +46,8 @@ token:
     expiration_time: 86400
   issuer: TOGAETHER
   audience: USER
+
+
+app:
+  upload:
+    dir: /Users/henry/images
