--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,4 +1,3 @@
-
 spring:
   main:
     allow-circular-references: true
@@ -17,6 +16,10 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   flyway:
     enabled: false
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 30MB
 
 management:
   endpoints:
@@ -51,3 +54,5 @@ token:
 app:
   upload:
     dir: /Users/henry/images
+
+
