--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,9 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
 
 
-
-
+    // jwt decode시 jdk 11이상에서 문제 발생하여 bind library 추가
+    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
 }
 
 tasks.named('test') {
