--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.hibernate.orm' version '6.1.5.Final'
     id 'org.graalvm.buildtools.native' version '0.9.18'
-    id "org.asciidoctor.jvm.convert" version "2.4.0"
+    id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
 
 group = 'io.ddd'
@@ -138,6 +138,16 @@ asciidoctor {
 //    baseDirFollowsSourceFile()
 }
 
+asciidoctor.doFirst {
+    delete file('src/main/resources/static/docs')
+}
+
+task copyDocument(type: Copy) {
+    dependsOn asciidoctor
+    from file("build/docs/asciidoc")
+    into file("src/main/resources/static/docs")
+}
+
 // 참고사항
 // 공식 문서에서는 위의 ascidoctor.doFirst부터 아래 내용은 없고 이와 같은 내용만 있습니다.
 // 이렇게 하면 jar로 만들어 질때 옮겨지는 것으로 IDE로 돌릴 때는 build 폴더에서만 확인이 가능합니다.
@@ -145,7 +155,19 @@ asciidoctor {
 // 위에 방법을 사용하든 아래 방법을 사용하든 편한 선택지를 사용하시면 됩니다.
 bootJar {
     dependsOn asciidoctor
+    // bootJar 설정. 스니펫을 이용해 문서 작성 후, build - docs
+    // - asciidoc 하위에 생기는 html 파일을 BOOT-INF/classes/static/docs로 복사해준다.
+    copy {
+        from "${asciidoctor.outputDir}"
+        into 'BOOT-INF/classes/static/docs'
+    }
 }
+
+build {
+    dependsOn copyDocument
+}
+
+
 
 
 // ============================== end rest doc ==============================
